--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.5",
+    "@angular/cdk": "~9.2.2",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
     "@angular/core": "~10.0.5",
     "@angular/forms": "~10.0.5",
+    "@angular/material": "^9.2.2",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@bpi/shared-components": "git+ssh://gitlab@repo1.laforge.cloud.bpifrance.fr:bel-reloaded/bpi-ui-registry.git#v0.0.185",
+    "@ngneat/transloco": "2.17.5",
+    "date-fns": "2.13.0",
+    "google-libphonenumber": "3.2.9",
+    "ngx-mask": "9.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
