add-code-detail

--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.5",
-    "@angular/cdk": "~9.2.2",
+    "@angular/animations": "^10.0.14",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
     "@angular/core": "~10.0.5",
     "@angular/forms": "~10.0.5",
-    "@angular/material": "^9.2.2",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
-    "@bpi/shared-components": "git+ssh://gitlab@repo1.laforge.cloud.bpifrance.fr:bel-reloaded/bpi-ui-registry.git#v0.0.185",
     "@ngneat/transloco": "2.17.5",
     "date-fns": "2.13.0",
     "google-libphonenumber": "3.2.9",
